[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/share_small.png" type="Texture" id=1]
[ext_resource path="res://asset/scuri.tres" type="Theme" id=2]
[ext_resource path="res://asset/reset.tres" type="Theme" id=3]
[ext_resource path="res://scripts/Vedi_sposta.gd" type="Script" id=4]
[ext_resource path="res://asset/football-pitch_0.png" type="Texture" id=5]
[ext_resource path="res://asset/chiari_theme.tres" type="Theme" id=6]
[ext_resource path="res://asset/sounds/object.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://asset/fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 55
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 2
extra_spacing_bottom = 2
extra_spacing_char = 1
extra_spacing_space = 1
font_data = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]

[node name="Visualizza_modifica" type="Node2D"]
script = ExtResource( 4 )

[node name="campo_calcio" type="TextureRect" parent="."]
margin_right = 2068.0
margin_bottom = 1194.0
texture = ExtResource( 5 )
expand = true

[node name="Intest_chiari" type="Label" parent="."]
margin_left = 1390.0
margin_top = 90.0
margin_right = 1617.0
margin_bottom = 175.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "CHIARI"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1

[node name="Intest_scuri" type="Label" parent="."]
margin_left = 470.0
margin_top = 90.0
margin_right = 697.0
margin_bottom = 175.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "SCURI"
align = 1
valign = 1
uppercase = true
max_lines_visible = 1

[node name="lista_chiari" type="VBoxContainer" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 1370.0
margin_top = 175.0
margin_right = 1655.0
margin_bottom = 996.0
theme = ExtResource( 6 )
alignment = 1

[node name="dif_chiari" type="VBoxContainer" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 1680.0
margin_top = 175.0
margin_right = 1965.0
margin_bottom = 996.0
theme = ExtResource( 6 )
alignment = 1

[node name="att_chiari" type="VBoxContainer" parent="."]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
margin_left = 1050.0
margin_top = 175.0
margin_right = 1335.0
margin_bottom = 996.0
theme = ExtResource( 6 )
alignment = 1

[node name="lista_scuri" type="VBoxContainer" parent="."]
margin_left = 420.0
margin_top = 175.0
margin_right = 705.0
margin_bottom = 996.0
focus_mode = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
alignment = 1

[node name="dif_scuri" type="VBoxContainer" parent="."]
margin_left = 110.0
margin_top = 175.0
margin_right = 395.0
margin_bottom = 996.0
focus_mode = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
alignment = 1

[node name="att_scuri" type="VBoxContainer" parent="."]
margin_left = 730.0
margin_top = 175.0
margin_right = 1015.0
margin_bottom = 996.0
focus_mode = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
alignment = 1

[node name="forza_chiari" type="Label" parent="."]
margin_left = 1725.0
margin_top = 90.0
margin_right = 1875.0
margin_bottom = 150.0
theme = ExtResource( 6 )

[node name="forza_scuri" type="Label" parent="."]
margin_left = 150.0
margin_top = 90.0
margin_right = 300.0
margin_bottom = 150.0
theme = ExtResource( 6 )

[node name="movePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="reset_button" type="Button" parent="."]
margin_left = 147.0
margin_top = 1050.0
margin_right = 268.0
margin_bottom = 1106.0
hint_tooltip = "Annulla gli spostamenti e riporta alla scelta iniziale delle squadre"
theme = ExtResource( 3 )
text = "reset"

[node name="share" type="Button" parent="."]
margin_left = 945.0
margin_top = 99.0
margin_right = 1128.0
margin_bottom = 160.0
rect_min_size = Vector2( 50, 50 )
hint_tooltip = "Salva un'immagine della schermata attuale"
theme = ExtResource( 3 )
text = "share"
icon = ExtResource( 1 )

[node name="back" type="Button" parent="."]
margin_left = 1592.0
margin_top = 1050.0
margin_right = 1916.0
margin_bottom = 1106.0
hint_tooltip = "Ricomincia tutto dall'inizio"
theme = ExtResource( 3 )
text = "torna all'inizio"

[node name="back2choice" type="Button" parent="."]
margin_left = 769.0
margin_top = 1050.0
margin_right = 1302.0
margin_bottom = 1106.0
hint_tooltip = "Torna a scegliere le due squadre"
theme = ExtResource( 3 )
text = "torna a scelta squadre"

[node name="port_chiari" type="VBoxContainer" parent="."]
margin_left = 2064.0
margin_top = 459.0
margin_right = 2340.0
margin_bottom = 556.0
rect_rotation = 90.0
theme = ExtResource( 6 )
alignment = 1

[node name="port_scuri" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 735.0
margin_right = 294.0
margin_bottom = 832.0
rect_rotation = 270.0
theme = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 364.0
margin_bottom = 130.0
rect_min_size = Vector2( 400, 140 )
window_title = "Salva un file"
resizable = true
dialog_text = "Scegli una cartella ove salvare la schermata"
access = 2
show_hidden_files = true

[connection signal="pressed" from="reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="button_up" from="share" to="." method="_on_share_button_up"]
[connection signal="button_up" from="back" to="." method="_on_back_button_up"]
[connection signal="button_up" from="back2choice" to="." method="_on_back2choice_button_up"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
